--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-auto-height-image": "^0.3.1",
+    "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "react-navigation": "^5.0.0",
     "tailwindcss": "^4.1.1"
