--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "first-app",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:3000/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +11,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.9.0",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -20,6 +23,7 @@
     "react-native": "^0.76.9",
     "react-native-auto-height-image": "^0.3.1",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-paper-dates": "^0.22.40",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
