--- a/client/app.json
+++ b/client/app.json
@@ -30,6 +30,12 @@
         "projectId": "15e863ae-ad9d-4291-92ee-d4ef92c6c8ee"
       }
     },
-    "owner": "zenitsu7"
+    "owner": "zenitsu7",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/15e863ae-ad9d-4291-92ee-d4ef92c6c8ee"
+    }
   }
 }
