--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-web": "~0.19.13",
     "react-navigation": "^5.0.0",
-    "tailwindcss": "^4.1.1"
+    "tailwindcss": "^4.1.1",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
