--- a/client/package.json
+++ b/client/package.json
@@ -18,19 +18,21 @@
     "axios": "^1.9.0",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
     "react-native-auto-height-image": "^0.3.1",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper-dates": "^0.22.40",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-web": "~0.19.13",
     "react-navigation": "^5.0.0",
-    "tailwindcss": "^4.1.1",
-    "expo-updates": "~0.27.4"
+    "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
