feat: Add full user account flow with Profile & Help screens: 1. Major Update: Introduced login, signup, splash screen, and profile pages 2. Implemented email/password-based login and signup UI 3. Integrated “Show/Hide Password” toggle on auth forms 4. Designed splash screen with branding 5. Created Profile screen with verification status 6. Added Help screen with developer contact (email, phone) 7. Included persistent user storage with local service module 8. Ensured all screens use clean, white background with playful styling 9. Fixed non-serializable navigation warning 10. Prevented multiple signup clicks by disabling the button post-submit

--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "first-app",
+    "name": "Memo Mate",
     "slug": "first-app",
     "version": "1.0.0",
     "orientation": "portrait",
