--- a/client/package.json
+++ b/client/package.json
@@ -10,32 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.9.0",
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.27.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "expo": "^53.0.7",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.12",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
-    "react-native": "^0.76.9",
+    "react-native": "0.79.2",
     "react-native-auto-height-image": "^0.3.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-paper-dates": "^0.22.40",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-system-navigation-bar": "^2.6.4",
-    "react-native-web": "~0.19.13",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "react-navigation": "^5.0.0",
     "tailwindcss": "^4.1.1"
   },
